# hitl-starter

./: .env.example  .gitignore  .linear.toml  .thumbnail  App.jsx  CLAUDE.md  app.css  components.jsx  data.js  drizzle.config.ts  feature_list.json  index.html  init.sh  package-lock.json  package.json  progress.md  proxy.ts  skills-lock.json  trigger.config.ts  vitest.config.ts  vitest.integration.config.ts
api/: .env.example  README.md  alembic.ini  config.py  main.py  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py
api/db/: models.py  seed.sql  session.py
api/db/migrations/: 001_initial_schema.sql
api/models/: schemas.py
api/routers/: carrier_reconciliation.py  carriers.py  hitl.py  lanes.py  loads.py  quote_desk.py  rate_insights.py  rate_snapshots.py  shipper_reactivation.py  shippers.py  weekly_digest.py
api/services/: rate_insights.py
api/tests/: test_rate_insights.py
api/workflows/carrier_reconciliation/: __init__.py
api/workflows/quote_desk/: __init__.py
api/workflows/shipper_reactivation/: __init__.py
api/workflows/weekly_digest/: __init__.py
app/: globals.css  layout.tsx  page.tsx
assets/: colors_and_type.css
brainstorming/: Claude Design Prompt.md  iteration 1 prompt.md
components/: Flyout.tsx
db/: domain.ts  index.ts  schema.ts
docs/: API.md  ARCHITECTURE.md  DESIGN.md
lib/: auth-client.ts  auth.ts  data.ts  format.test.ts  format.ts  renderField.test.tsx  renderField.tsx  types.ts
pages/: Config.jsx  Dashboard.jsx  Flyout.jsx  Login.jsx  Settings.jsx
scripts/: seed.ts  (+1 more)
(+60 files in other folders)
