[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.0",
    "anthropic==0.42.0",
    "asyncpg==0.30.0",
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "langchain-anthropic==0.3.1",
    "langgraph==0.2.60",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
    "sqlalchemy[asyncio]==2.0.36",
    "uvicorn[standard]==0.34.0",
]
